# server

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  README.md  config.h.cmake  revision.h.cmake
cmake/: FindACE.cmake  MacroMangosIncludeDirs.cmake
dep/: CMakeLists.txt
dep/ACE_wrappers/: CMakeLists.txt
dep/StormLib/: CMakeLists.txt
dep/StormLib/src/: StormPort.h
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/DebugUtils/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Detour/Source/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/recastnavigation/RecastDemo/: CMakeLists.txt
dep/recastnavigation/RecastDemo/Include/: Debug.h
dep/src/: CMakeLists.txt
dep/src/g3dlite/: BinaryInput.cpp  CMakeLists.txt  FileSystem.cpp  fileutils.cpp
dep/src/gsoap/: CMakeLists.txt
dep/src/zlib/: CMakeLists.txt
dep/tbb/: CMakeLists.txt
docs/: AuctionHouseBot.md  EventAI.md
sql/scripts/: mangos_scriptname_full.sql  scriptdev2_script_full.sql
sql/scripts/updates/: r2929_scriptdev2.sql  r2932_mangos.sql  r2932_scriptdev2.sql  r2933_mangos.sql  r2933_scriptdev2.sql
sql/updates/: 12741_01_mangos.sql  README
src/: CMakeLists.txt
src/bindings/: .gitignore  CMakeLists.txt
src/bindings/scripts/: CMakeLists.txt  ScriptDevMgr.cpp  ScriptMgr.cpp  config-sd2.h.cmake  scriptdev2.conf.dist.cmake  scriptdev2.conf.dist.in
src/bindings/scripts/base/: escort_ai.cpp
src/bindings/scripts/docs/: How_to_install.html  How_to_install.txt
src/bindings/scripts/include/: precompiled.h  sc_creature.cpp  sc_grid_searchers.cpp  sc_grid_searchers.h  sc_instance.h
src/bindings/scripts/scripts/eastern_kingdoms/: stormwind_city.cpp
src/bindings/scripts/scripts/eastern_kingdoms/blackrock_mountain/blackwing_lair/: boss_ebonroc.cpp  boss_firemaw.cpp  boss_flamegor.cpp
src/bindings/scripts/scripts/eastern_kingdoms/deadmines/: boss_admiral_ripsnarl.cpp  boss_cookie.cpp  boss_foe_reaper_5000.cpp  boss_glubtok.cpp  boss_helix_gearbreaker.cpp  deadmines.h  instance_deadmines.cpp
src/bindings/scripts/scripts/kalimdor/maraudon/: maraudon.cpp  maraudon.h
src/bindings/scripts/scripts/kalimdor/temple_of_ahnqiraj/: boss_cthun.cpp  mob_anubisath_sentinel.cpp
src/bindings/scripts/scripts/northrend/azjol_nerub/azjol_nerub/: boss_anubarak.cpp  boss_hadronox.cpp  boss_krikthir.cpp  instance_azjol_nerub.cpp
src/bindings/scripts/sql/: scriptdev2_script_full.sql
src/bindings/scripts/system/: MangosdRev.cpp  ScriptLoader.cpp  system.cpp
src/framework/: CMakeLists.txt
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Utilities/: ByteConverter.h  UnorderedMapSet.h
src/game/: AuctionHouseHandler.cpp  CMakeLists.txt  CharacterHandler.cpp  Chat.cpp  ChatHandler.cpp  Creature.cpp  Creature.h  CreatureAI.cpp  CreatureEventAI.cpp  CreatureEventAI.h  CreatureEventAIMgr.cpp  GameObject.cpp  GridMap.cpp  Group.cpp  Guild.cpp  Guild.h  Item.cpp  Language.h  Level1.cpp  Level3.cpp  LootHandler.cpp  Map.cpp  Map.h  MapManager.h  MapPersistentStateMgr.cpp  MapPersistentStateMgr.h  MiscHandler.cpp  MoveMap.cpp  MoveMap.h  MoveMapSharedDefines.h  MovementHandler.cpp  Object.cpp  Object.h  ObjectGridLoader.cpp  ObjectMgr.cpp  Opcodes.h  PathFinder.cpp  PathFinder.h  Pet.cpp  Player.cpp  (+17 more)
src/game/AuctionHouseBot/: CMakeLists.txt  ahbot.conf.dist.cmake
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  CMakeLists.txt
src/game/OutdoorPvP/: CMakeLists.txt
src/game/luaengine/: LuaEngine.cpp  LuaEngine.h  LuaFunctions.cpp  LuaHookMgr.cpp  LuaHookMgr.h  LuaHooks.cpp  LuaIncludes.h
src/game/metztil/: LuaEngine.cpp  LuaEngine.h
src/game/movement/: CMakeLists.txt
src/game/vmap/: CMakeLists.txt  GameObjectModel.cpp  GameObjectModel.h  MapTree.cpp  TileAssembler.cpp
src/mangosd/: CMakeLists.txt  Master.cpp  mangosd.conf.dist.cmake
src/realmd/: AuthSocket.cpp  CMakeLists.txt  Main.cpp  realmd.conf.dist.cmake  realmd.conf.dist.in
src/shared/: CMakeLists.txt  Errors.h  Log.cpp  PosixDaemon.cpp  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  Threading.h  Util.cpp
src/shared/Auth/: AuthCrypt.h
src/shared/Config/: Config.cpp
src/shared/Database/: DBCFileLoader.cpp  Database.cpp  DatabaseMysql.cpp  DatabaseMysql.h  DatabasePostgre.h  QueryResultMysql.h  SQLStorage.cpp  SqlDelayThread.h  SqlOperations.h
src/tools/: CMakeLists.txt
src/tools/extractors-scripts/: ExtractResources.sh
src/tools/genrevision/: genrevision.cpp
src/tools/git_id/: CMakeLists.txt  git_id.cpp
src/tools/map-extractor/: CMakeLists.txt  README.md  System.cpp  dbcfile.cpp  dbcfile.h
src/tools/map-extractor/loadlib/: CMakeLists.txt  adt.cpp  adt.h  loadlib.cpp  loadlib.h  wdt.cpp  wdt.h
src/tools/mmap-extractor/: CMakeLists.txt  MapBuilder.cpp  mmap_extract.py
src/tools/mmap-extractor/src/: generator.cpp
src/tools/mmap-generator/: CMakeLists.txt  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  TerrainBuilder.cpp  TerrainBuilder.h  generator.cpp
src/tools/vmap-assembler/: CMakeLists.txt  vmap_assembler.cpp
src/tools/vmap-extractor/: CMakeLists.txt  README.md  adtfile.cpp  dbcfile.cpp  model.cpp  mpqfile.h  vmapexport.cpp  wmo.cpp
src/tools/vmap-extractor/vmapextract/: CMakeLists.txt
